# PNGTool

./: .gitignore  CMakeLists.txt  PNGTool.sln
QtWidgets/: .gitignore  QtWidgets.cpp  QtWidgets.ui  QtWidgets.vcxproj  main.cpp
lib/Qt5.15.2/msvc2019_64/lib/: Qt53DAnimation.lib  Qt53DAnimationd.lib  Qt53DCore.lib  Qt53DCore.prl  Qt53DCored.lib  Qt53DCored.prl  Qt53DExtras.lib  Qt53DExtrasd.lib  Qt53DInput.lib  Qt53DInputd.lib  Qt53DLogic.lib  Qt53DLogicd.lib  Qt53DQuick.lib  Qt53DQuickAnimation.lib  Qt53DQuickAnimationd.lib  Qt53DQuickExtras.lib  Qt53DQuickExtrasd.lib  Qt53DQuickInput.lib  Qt53DQuickInputd.lib  Qt53DQuickRender.lib  Qt53DQuickRenderd.lib  Qt53DQuickScene2D.lib  Qt53DQuickScene2Dd.lib  Qt53DQuickd.lib  Qt53DRender.lib  Qt53DRender.prl  Qt53DRenderd.lib  Qt53DRenderd.prl  Qt5AccessibilitySupport.lib  Qt5AccessibilitySupport.prl  Qt5AccessibilitySupportd.lib  Qt5AccessibilitySupportd.prl  Qt5AxBase.lib  Qt5AxBase.prl  Qt5AxBased.lib  Qt5AxBased.prl  Qt5AxContainer.lib  Qt5AxContainer.prl  Qt5AxContainerd.prl  Qt5AxServer.lib  (+141 more)
lib/Qt5.15.2/msvc2019_64/lib/cmake/Qt53DCore/: Qt53DCoreConfig.cmake
lib/Qt5.15.2/msvc2019_64/mkspecs/: qconfig.pri  qmodule.pri
lib/Qt5.15.2/msvc2019_64/mkspecs/modules/: qt_lib_gui_private.pri  qt_lib_network_private.pri
lib/Qt5.15.2/msvc2019_64/plugins/designer/: EraGoupBox.exp  EraGoupBox.ilk  EraGoupBox.lib  EraSliderSpinner.exp  EraSliderSpinner.lib
lib/libpng-1.6.38/lib/: libpng16_staticd.lib  libpng16d.lib
lib/libpng-1.6.38/lib/libpng/: libpng16.cmake
lib/zlib/lib/: zlibd.lib  zlibstaticd.lib
src/: Pic_data.cpp  Pic_data.h  QtWidgets.cpp  QtWidgets.h  QtWidgets.qrc  QtWidgets.vcxproj.filters
